# prueba-tecnica-leasy

./: .dockerignore  .gitignore  API_CONTRACT.md  ASSESSMENT.md  DECISIONS.md  DOCKER.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
client-app/: README.md  package-lock.json  package.json
client-app/src/: App.tsx
client-app/src/services/: api.ts
client-app/src/types/: api.ts
postman/: test_api_endpoints.postman_collection.json
src/client_portal/: __init__.py  api.py  exceptions.py  schemas.py  security.py  services.py
src/client_portal/tests/: __init__.py  test_api.py
src/config/: settings.py  urls.py
src/prueba_tecnica_fullstack_backoffice/: __init__.py
src/reservations/: __init__.py  admin.py  constants.py  exceptions.py  forms.py  models.py  services.py  urls.py  views.py
src/reservations/management/: __init__.py
src/reservations/management/commands/: __init__.py  seed_assessment_data.py
src/reservations/migrations/: 0001_initial.py  0002_reservation_hold_reason_alter_reservation_status.py  __init__.py
src/reservations/tests/: __init__.py  factories.py  test_services.py  test_views.py
src/shared/: __init__.py  errors.py  mixins.py
src/templates/: base.html
src/templates/registration/: login.html
src/templates/reservations/: detail.html  edit.html  list.html
