[project]
name = "prueba-tecnica-fullstack-backoffice"
version = "0.1.0"
description = "Starter repo for a Django backoffice + Django Ninja technical assessment."
readme = "README.md"
authors = [
    { name = "Mikel Aranda", email = "mikelmulti460@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "django>=5.2,<5.3",
    "django-cors-headers>=4.9.0",
    "django-ninja>=1.3.0",
    "gunicorn>=26.0.0",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "factory_boy>=3.3.0",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "ruff>=0.13.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["src"]
testpaths = ["src"]
addopts = "-ra"
